Le pusimos el final del csv

--- a/analisis_heji_1/migraciones_vdsl.ipynb
+++ b/analisis_heji_1/migraciones_vdsl.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -225,6 +225,211 @@
    "source": [
     "df_err_migracion = pd.read_csv('REP_VDSL_TELNOR_20170213T.csv')\n",
     "df_err_migracion.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>telefono</th>\n",
+       "      <th>concentrador</th>\n",
+       "      <th>tbaoequipo</th>\n",
+       "      <th>b</th>\n",
+       "      <th>r</th>\n",
+       "      <th>t</th>\n",
+       "      <th>p</th>\n",
+       "      <th>PERFIL_ORIGEN</th>\n",
+       "      <th>PERFIL_FINAL</th>\n",
+       "      <th>PERFIL_MIGRADO</th>\n",
+       "      <th>...</th>\n",
+       "      <th>VEL_ACCESO</th>\n",
+       "      <th>VEL_INICIAL</th>\n",
+       "      <th>VEL_FINAL</th>\n",
+       "      <th>VEL_OFERTA</th>\n",
+       "      <th>PRECALIFICACION_VDSL</th>\n",
+       "      <th>OC</th>\n",
+       "      <th>MEDIDOS</th>\n",
+       "      <th>PERFIL_VDSL</th>\n",
+       "      <th>DIAGNoSTICO</th>\n",
+       "      <th>VEL_BRAS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2514</th>\n",
+       "      <td>6646843565</td>\n",
+       "      <td>BCNSAA00AL00SAA00012</td>\n",
+       "      <td>BCNSAA00AL00SAA00012</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18</td>\n",
+       "      <td>v_10M_dpbo_0-1km</td>\n",
+       "      <td>v_10M_dpbo_0-1km</td>\n",
+       "      <td>v_10M_dpbo_0-1km</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2515</th>\n",
+       "      <td>6646846154</td>\n",
+       "      <td>BCN-OBRERA-4</td>\n",
+       "      <td>BCN-OBRERA-4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>28</td>\n",
+       "      <td>u_b_9600_a</td>\n",
+       "      <td>u_b_9600_a</td>\n",
+       "      <td>u_b_9600_a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2516</th>\n",
+       "      <td>6646861414</td>\n",
+       "      <td>BCN-HIPODROMO-5</td>\n",
+       "      <td>BCN-HIPODROMO-5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>40</td>\n",
+       "      <td>u_b_12544_640_a</td>\n",
+       "      <td>u_b_12544_640_a</td>\n",
+       "      <td>u_b_12544_640_a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2517</th>\n",
+       "      <td>6646878827</td>\n",
+       "      <td>BCNSAA00AL00SAA00012</td>\n",
+       "      <td>BCNSAA00AL00SAA00012</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>40</td>\n",
+       "      <td>v_10M_dpbo_0-1km</td>\n",
+       "      <td>v_10M_dpbo_0-1km</td>\n",
+       "      <td>v_10M_dpbo_0-1km</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2518</th>\n",
+       "      <td>6646878577</td>\n",
+       "      <td>BCNSAA00AL00SAA00012</td>\n",
+       "      <td>BCNSAA00AL00SAA00012</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>36</td>\n",
+       "      <td>v_10M_dpbo_0-1km</td>\n",
+       "      <td>v_10M_dpbo_0-1km</td>\n",
+       "      <td>v_10M_dpbo_0-1km</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        telefono          concentrador            tbaoequipo  b  r  t   p  \\\n",
+       "2514  6646843565  BCNSAA00AL00SAA00012  BCNSAA00AL00SAA00012  1  1  4  18   \n",
+       "2515  6646846154          BCN-OBRERA-4          BCN-OBRERA-4  1  1  5  28   \n",
+       "2516  6646861414       BCN-HIPODROMO-5       BCN-HIPODROMO-5  1  1  8  40   \n",
+       "2517  6646878827  BCNSAA00AL00SAA00012  BCNSAA00AL00SAA00012  1  1  2  40   \n",
+       "2518  6646878577  BCNSAA00AL00SAA00012  BCNSAA00AL00SAA00012  1  1  2  36   \n",
+       "\n",
+       "         PERFIL_ORIGEN      PERFIL_FINAL    PERFIL_MIGRADO    ...     \\\n",
+       "2514  v_10M_dpbo_0-1km  v_10M_dpbo_0-1km  v_10M_dpbo_0-1km    ...      \n",
+       "2515        u_b_9600_a        u_b_9600_a        u_b_9600_a    ...      \n",
+       "2516   u_b_12544_640_a   u_b_12544_640_a   u_b_12544_640_a    ...      \n",
+       "2517  v_10M_dpbo_0-1km  v_10M_dpbo_0-1km  v_10M_dpbo_0-1km    ...      \n",
+       "2518  v_10M_dpbo_0-1km  v_10M_dpbo_0-1km  v_10M_dpbo_0-1km    ...      \n",
+       "\n",
+       "      VEL_ACCESO  VEL_INICIAL  VEL_FINAL  VEL_OFERTA  PRECALIFICACION_VDSL  \\\n",
+       "2514         NaN          NaN        NaN         NaN                   NaN   \n",
+       "2515         NaN          NaN        NaN         NaN                   NaN   \n",
+       "2516         NaN          NaN        NaN         NaN                   NaN   \n",
+       "2517         NaN          NaN        NaN         NaN                   NaN   \n",
+       "2518         NaN          NaN        NaN         NaN                   NaN   \n",
+       "\n",
+       "      OC MEDIDOS  PERFIL_VDSL  DIAGNoSTICO  VEL_BRAS  \n",
+       "2514 NaN     NaN          NaN          NaN       NaN  \n",
+       "2515 NaN     NaN          NaN          NaN       NaN  \n",
+       "2516 NaN     NaN          NaN          NaN       NaN  \n",
+       "2517 NaN     NaN          NaN          NaN       NaN  \n",
+       "2518 NaN     NaN          NaN          NaN       NaN  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_err_migracion.tail()"
    ]
   },
   {
