--- a/aind2-dl-master/IMDB_In_Keras.ipynb
+++ b/aind2-dl-master/IMDB_In_Keras.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Analyzing IMDB Data in Keras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -22,6 +25,7 @@
     "import keras\n",
     "from keras.datasets import imdb\n",
     "from keras.models import Sequential\n",
+    "from keras.callbacks import ModelCheckpoint\n",
     "from keras.layers import Dense, Dropout, Activation\n",
     "from keras.preprocessing.text import Tokenizer\n",
     "import matplotlib.pyplot as plt\n",
@@ -32,7 +36,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 1. Loading the data\n",
     "This dataset comes preloaded with Keras, so one simple command will get us training and testing data. There is a parameter for how many words we want to look at. We've set it at 1000, but feel free to experiment."
@@ -40,13 +47,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25000,)\n",
+      "(25000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading the data (it's preloaded in Keras)\n",
     "(x_train, y_train), (x_test, y_test) = imdb.load_data(num_words=1000)\n",
@@ -57,7 +73,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 2. Examining the data\n",
     "Notice that the data has been already pre-processed, where all the words have numbers, and the reviews come in as a vector with the words that the review contains. For example, if the word 'the' is the first one in our dictionary, and a review contains the word 'the', then there is a 1 in the corresponding vector.\n",
@@ -67,11 +86,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 14, 22, 16, 43, 530, 973, 2, 2, 65, 458, 2, 66, 2, 4, 173, 36, 256, 5, 25, 100, 43, 838, 112, 50, 670, 2, 9, 35, 480, 284, 5, 150, 4, 172, 112, 167, 2, 336, 385, 39, 4, 172, 2, 2, 17, 546, 38, 13, 447, 4, 192, 50, 16, 6, 147, 2, 19, 14, 22, 4, 2, 2, 469, 4, 22, 71, 87, 12, 16, 43, 530, 38, 76, 15, 13, 2, 4, 22, 17, 515, 17, 12, 16, 626, 18, 2, 5, 62, 386, 12, 8, 316, 8, 106, 5, 4, 2, 2, 16, 480, 66, 2, 33, 4, 130, 12, 16, 38, 619, 5, 25, 124, 51, 36, 135, 48, 25, 2, 33, 6, 22, 12, 215, 28, 77, 52, 5, 14, 407, 16, 82, 2, 8, 4, 107, 117, 2, 15, 256, 4, 2, 7, 2, 5, 723, 36, 71, 43, 530, 476, 26, 400, 317, 46, 7, 4, 2, 2, 13, 104, 88, 4, 381, 15, 297, 98, 32, 2, 56, 26, 141, 6, 194, 2, 18, 4, 226, 22, 21, 134, 476, 26, 480, 5, 144, 30, 2, 18, 51, 36, 28, 224, 92, 25, 104, 4, 226, 65, 16, 38, 2, 88, 12, 16, 283, 5, 16, 2, 113, 103, 32, 15, 16, 2, 19, 178, 32]\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(x_train[0])\n",
     "print(y_train[0])"
@@ -79,7 +109,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 3. One-hot encoding the output\n",
     "Here, we'll turn the input vectors into (0,1)-vectors. For example, if the pre-processed vector contains the number 14, then in the processed vector, the 14th entry will be 1."
@@ -87,13 +120,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  1.  1.  0.  1.  1.  1.  1.  1.  1.  0.  0.  1.  1.  1.  1.  1.  1.\n",
+      "  1.  1.  0.  1.  1.  0.  0.  1.  1.  0.  1.  0.  1.  0.  1.  1.  0.  1.\n",
+      "  1.  0.  1.  1.  0.  0.  0.  1.  0.  0.  1.  0.  1.  0.  1.  1.  1.  0.\n",
+      "  0.  0.  1.  0.  0.  0.  0.  0.  1.  0.  0.  1.  1.  0.  0.  0.  0.  1.\n",
+      "  0.  0.  0.  0.  1.  1.  0.  0.  0.  0.  1.  0.  0.  0.  0.  1.  1.  0.\n",
+      "  0.  0.  1.  0.  0.  0.  0.  0.  1.  0.  1.  0.  0.  1.  1.  0.  1.  1.\n",
+      "  0.  0.  0.  0.  1.  1.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  1.  0.\n",
+      "  0.  0.  0.  0.  1.  0.  0.  0.  1.  1.  0.  0.  0.  0.  0.  1.  0.  0.\n",
+      "  1.  0.  0.  1.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  1.  1.  0.  0.  0.  0.  1.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  1.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  1.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  1.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  1.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  1.  0.  0.  0.  1.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  1.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  1.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n"
+     ]
+    }
+   ],
    "source": [
     "# One-hot encoding the output into vector mode, each of length 1000\n",
     "tokenizer = Tokenizer(num_words=1000)\n",
@@ -104,20 +200,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "And we'll also one-hot encode the output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25000, 2)\n",
+      "(25000, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# One-hot encoding the output\n",
     "num_classes = 2\n",
@@ -129,7 +237,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 4. Building the  model architecture\n",
     "Build a model here using sequential. Feel free to experiment with different layers and sizes! Also, experiment adding dropout to reduce overfitting."
@@ -137,22 +248,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_32 (Dense)             (None, 512)               512512    \n",
+      "_________________________________________________________________\n",
+      "dropout_13 (Dropout)         (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_33 (Dense)             (None, 2)                 1026      \n",
+      "=================================================================\n",
+      "Total params: 513,538.0\n",
+      "Trainable params: 513,538.0\n",
+      "Non-trainable params: 0.0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Build the model architecture\n",
+    "model =  Sequential()\n",
+    "model.add(Dense(512, activation='relu', input_dim=1000))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(num_classes, activation='softmax' ))\n",
+    "model.summary()\n",
     "\n",
-    "# TODO: Compile the model using a loss function and an optimizer.\n"
+    "\n",
+    "# TODO: Compile the model using a loss function and an optimizer.\n",
+    "model.compile(loss='categorical_crossentropy', \n",
+    "              optimizer='rmsprop', \n",
+    "              metrics=['accuracy'] )\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 5. Training the model\n",
     "Run the model here. Experiment with different batch_size, and number of epochs!"
@@ -160,20 +303,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 20000 samples, validate on 5000 samples\n",
+      "Epoch 1/10\n",
+      "Epoch 00000: val_loss improved from inf to 0.32834, saving model to mnist.model.best.hdf5\n",
+      "6s - loss: 0.4283 - acc: 0.8023 - val_loss: 0.3283 - val_acc: 0.8624\n",
+      "Epoch 2/10\n",
+      "Epoch 00001: val_loss improved from 0.32834 to 0.32605, saving model to mnist.model.best.hdf5\n",
+      "6s - loss: 0.3184 - acc: 0.8636 - val_loss: 0.3260 - val_acc: 0.8606\n",
+      "Epoch 3/10\n",
+      "Epoch 00002: val_loss did not improve\n",
+      "6s - loss: 0.2733 - acc: 0.8886 - val_loss: 0.3901 - val_acc: 0.8342\n",
+      "Epoch 4/10\n",
+      "Epoch 00003: val_loss did not improve\n",
+      "6s - loss: 0.2317 - acc: 0.9093 - val_loss: 0.3428 - val_acc: 0.8608\n",
+      "Epoch 5/10\n",
+      "Epoch 00004: val_loss did not improve\n",
+      "6s - loss: 0.1877 - acc: 0.9304 - val_loss: 0.3504 - val_acc: 0.8610\n",
+      "Epoch 6/10\n",
+      "Epoch 00005: val_loss did not improve\n",
+      "6s - loss: 0.1485 - acc: 0.9494 - val_loss: 0.3899 - val_acc: 0.8574\n",
+      "Epoch 7/10\n",
+      "Epoch 00006: val_loss did not improve\n",
+      "6s - loss: 0.1179 - acc: 0.9634 - val_loss: 0.4168 - val_acc: 0.8600\n",
+      "Epoch 8/10\n",
+      "Epoch 00007: val_loss did not improve\n",
+      "6s - loss: 0.0905 - acc: 0.9728 - val_loss: 0.4433 - val_acc: 0.8606\n",
+      "Epoch 9/10\n",
+      "Epoch 00008: val_loss did not improve\n",
+      "6s - loss: 0.0646 - acc: 0.9821 - val_loss: 0.4987 - val_acc: 0.8590\n",
+      "Epoch 10/10\n",
+      "Epoch 00009: val_loss did not improve\n",
+      "6s - loss: 0.0519 - acc: 0.9876 - val_loss: 0.5347 - val_acc: 0.8534\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Run the model. Feel free to experiment with different batch sizes and number of epochs."
+    "# TODO: Run the model. Feel free to experiment with different batch sizes and number of epochs.\n",
+    "checkpoint = ModelCheckpoint(filepath='mnist.model.best.hdf5',\n",
+    "                            verbose=1, save_best_only=True)\n",
+    "\n",
+    "hist = model.fit(x_train, y_train,\n",
+    "          batch_size=128, epochs=10,  \n",
+    "          validation_split=0.2, callbacks=[checkpoint],\n",
+    "          verbose=2, shuffle=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 6. Evaluating the model\n",
     "This will give you the accuracy of the model, as evaluated on the testing set. Can you get something over 85%?"
@@ -181,22 +372,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 85.92%\n"
+     ]
+    }
+   ],
    "source": [
+    "model.load_weights('mnist.model.best.hdf5')\n",
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
-    "print(\"Accuracy: \", score[1])"
+    "scorex = 100*score[1]\n",
+    "print(\"Accuracy: %.2f%%\" % scorex )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -210,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
