Convonutional Neural Networks CNN
Demo con Keras trabajaremos Minst primero

--- a/aind2-dl-master/IMDB_In_Keras.ipynb
+++ b/aind2-dl-master/IMDB_In_Keras.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -316,35 +316,35 @@
      "text": [
       "Train on 20000 samples, validate on 5000 samples\n",
       "Epoch 1/10\n",
-      "Epoch 00000: val_loss improved from inf to 0.32834, saving model to mnist.model.best.hdf5\n",
-      "6s - loss: 0.4283 - acc: 0.8023 - val_loss: 0.3283 - val_acc: 0.8624\n",
+      "Epoch 00000: val_loss improved from inf to 0.34740, saving model to mnist.model.best.hdf5\n",
+      "18s - loss: 0.3039 - acc: 0.8753 - val_loss: 0.3474 - val_acc: 0.8666\n",
       "Epoch 2/10\n",
-      "Epoch 00001: val_loss improved from 0.32834 to 0.32605, saving model to mnist.model.best.hdf5\n",
-      "6s - loss: 0.3184 - acc: 0.8636 - val_loss: 0.3260 - val_acc: 0.8606\n",
+      "Epoch 00001: val_loss did not improve\n",
+      "18s - loss: 0.2832 - acc: 0.8959 - val_loss: 0.3871 - val_acc: 0.8624\n",
       "Epoch 3/10\n",
       "Epoch 00002: val_loss did not improve\n",
-      "6s - loss: 0.2733 - acc: 0.8886 - val_loss: 0.3901 - val_acc: 0.8342\n",
+      "18s - loss: 0.2715 - acc: 0.9076 - val_loss: 0.4226 - val_acc: 0.8614\n",
       "Epoch 4/10\n",
       "Epoch 00003: val_loss did not improve\n",
-      "6s - loss: 0.2317 - acc: 0.9093 - val_loss: 0.3428 - val_acc: 0.8608\n",
+      "18s - loss: 0.2548 - acc: 0.9172 - val_loss: 0.4827 - val_acc: 0.8502\n",
       "Epoch 5/10\n",
       "Epoch 00004: val_loss did not improve\n",
-      "6s - loss: 0.1877 - acc: 0.9304 - val_loss: 0.3504 - val_acc: 0.8610\n",
+      "18s - loss: 0.2402 - acc: 0.9253 - val_loss: 0.5576 - val_acc: 0.8492\n",
       "Epoch 6/10\n",
       "Epoch 00005: val_loss did not improve\n",
-      "6s - loss: 0.1485 - acc: 0.9494 - val_loss: 0.3899 - val_acc: 0.8574\n",
+      "18s - loss: 0.2207 - acc: 0.9352 - val_loss: 0.5669 - val_acc: 0.8586\n",
       "Epoch 7/10\n",
       "Epoch 00006: val_loss did not improve\n",
-      "6s - loss: 0.1179 - acc: 0.9634 - val_loss: 0.4168 - val_acc: 0.8600\n",
+      "18s - loss: 0.2068 - acc: 0.9434 - val_loss: 0.5902 - val_acc: 0.8552\n",
       "Epoch 8/10\n",
       "Epoch 00007: val_loss did not improve\n",
-      "6s - loss: 0.0905 - acc: 0.9728 - val_loss: 0.4433 - val_acc: 0.8606\n",
+      "18s - loss: 0.1853 - acc: 0.9518 - val_loss: 0.6751 - val_acc: 0.8484\n",
       "Epoch 9/10\n",
       "Epoch 00008: val_loss did not improve\n",
-      "6s - loss: 0.0646 - acc: 0.9821 - val_loss: 0.4987 - val_acc: 0.8590\n",
+      "18s - loss: 0.1752 - acc: 0.9544 - val_loss: 0.6721 - val_acc: 0.8528\n",
       "Epoch 10/10\n",
       "Epoch 00009: val_loss did not improve\n",
-      "6s - loss: 0.0519 - acc: 0.9876 - val_loss: 0.5347 - val_acc: 0.8534\n"
+      "18s - loss: 0.1602 - acc: 0.9625 - val_loss: 0.6977 - val_acc: 0.8526\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
     "                            verbose=1, save_best_only=True)\n",
     "\n",
     "hist = model.fit(x_train, y_train,\n",
-    "          batch_size=128, epochs=10,  \n",
+    "          batch_size=32, epochs=10,  \n",
     "          validation_split=0.2, callbacks=[checkpoint],\n",
     "          verbose=2, shuffle=True)"
    ]
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -383,7 +383,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 85.92%\n"
+      "Accuracy: 85.96%\n"
      ]
     }
    ],
